make homepage h1 smaller, fix footer text alignment for medium up

--- a/custom.css
+++ b/custom.css
@@ -186,7 +186,7 @@ code {
   background: url("dev-images/ba-road.jpg") no-repeat bottom center;
 }
 .site-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 1.2;
 }
 .site-description {
